# auto_agent

./: .gitignore  CLAUDE.md  LICENSE  MIGRATION_GUIDE.md  OPTIMIZATION_PLAN.md  README.md  models.py  pyproject.toml  setup.py
auto_agent/: __init__.py  models.py
auto_agent/auto_playwright/: readme.md
auto_agent/core/: __init__.py  agent.py  binding_planner.py  context.py  executor.py  orchestrator.py  planner.py
auto_agent/core/editor/: __init__.py  parser.py
auto_agent/core/executor/: __init__.py  base.py  consistency.py  param_builder.py  post_policy.py  replan.py  state.py
auto_agent/core/report/: __init__.py  generator.py
auto_agent/core/router/: __init__.py  intent.py
auto_agent/llm/: __init__.py  client.py  prompts.py
auto_agent/llm/providers/: __init__.py  anthropic.py  deepseek.py  openai.py
auto_agent/memory/: __init__.py  base.py  categorized.py  long_term.py  manager.py  models.py  narrative.py  router.py  semantic.py  short_term.py  system.py  working.py
auto_agent/memory/storage/: __init__.py  markdown.py  redis.py  sqlite.py
auto_agent/retry/: controller.py  models.py  strategies.py
auto_agent/session/: __init__.py  manager.py  models.py
auto_agent/tools/: base.py  models.py  registry.py
auto_agent/tools/builtin/: __init__.py  calculator.py  code_executor.py  web_search.py
auto_agent/tracing/: __init__.py  context.py  models.py
auto_agent/utils/: logger.py
compare_with_langchain/: README.md
compare_with_langchain/code_generate/auto_agent/: README.md  __init__.py  execution_report_20251218_233042.md  execution_report_20251221_205909.md  execution_report_detailed_20251221_205909.md  models.py  router.py  service.py  test_api.py
compare_with_langchain/code_generate/langchain_tools_call/: models.py  router.py  service.py  test_api.py
compare_with_langchain/deep_research/auto_agent/: research_report_detailed_20251218_201814.md  research_report_detailed_20251219_104559.md  research_report_detailed_20251221_202413.md
core/: __init__.py
docs/: BINDING_PLANNER.md  MEMORY.md  OPTIMIZE.md  REPLAN_OPTIMIZATION_TODO.md  TOOLS.md
examples/: adaptive_memo_demo.py  basic_usage.py  case_agent_demo.py  cross_step_replan_demo.py  custom_tool.py  deep_research_demo.py  full_demo.py  llm_agent_demo.py  memory_compression.py  memory_demo.py  replan_quick_test.py  test_replan_features.py  workflow_demo.py  writer_agent_demo.py
examples/fullstack_generator/: __init__.py  main.py  runner.py  tools.py  tools_writer.py
examples/fullstack_generator/tests/: __init__.py  run_all.py  test_tools.py  (+2 more)
examples/langchain_compare/: __init__.py  adaptive_memo_langchain.py  benchmark.py  fullstack_langchain.py  main.py  tools.py  tools_part2.py
examples/research_materials/: market_data.txt
llm/: client.py
llm/providers/: __init__.py
memory/: __init__.py  models.py  short_term.py
retry/: __init__.py
tests/: __init__.py  test_binding_planner.py  test_integration.py  test_memory.py  test_memory_system.py  test_param_builder_cache.py  test_param_builder_error_policy.py  test_param_builder_fallback.py  test_router.py  test_session.py
tools/: __init__.py
tools/builtin/: code_executor.py
utils/: serialization.py  validators.py
(+5 files in other folders)
