[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "auto-agent"
version = "0.1.0"
description = "基于 LLM 的自主智能体框架"
readme = "README.md"
authors = [{ name = "xiaoshuyui", email = "guchengxi1994@qq.com" }]
license = { text = "MIT" }
requires-python = ">=3.10"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

dependencies = ["pydantic>=2.0", "httpx>=0.25"]

[project.optional-dependencies]
dev = [
    "pytest>=9.0",
    "pytest-asyncio>=1.3",
    "pytest-cov>=7.0",
    "black>=25.12",
    "ruff>=0.14.9",
]

storage = ["aiosqlite>=0.22.0", "redis>=7.1.0"]

llm = ["openai>=2.13"]

all = ["auto-agent[dev,storage,llm]"]

[project.urls]
Homepage = "https://github.com/AI-change-the-world/auto_agent"
Repository = "https://github.com/AI-change-the-world/auto_agent"
Documentation = "https://auto-agent.readthedocs.io"              # TODO

[tool.setuptools.packages.find]
where = ["."]
include = ["auto_agent*"]

[tool.ruff]
line-length = 88
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W"]
ignore = []

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
asyncio_mode = "auto"
